styles/sass/main.scss
@use "sass:color";
@import "themes";
@import "stars";

@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

$nav-width: 200px;
// $bg: rgb(15, 15, 15);
$border-rounding: 10px;
$item-font-size: 0.8em;
$tablet: 768px;

@mixin custom-scrollbar() {
    &::-webkit-scrollbar {
        width: 5px;
        height: 5px;
    }
    &::-webkit-scrollbar-track {
        background: #00000000;
    }
    &::-webkit-scrollbar-thumb {
        @include theme() {
            background: t($bg-3);
        }
        border-radius: $border-rounding;

        &:hover {
            @include theme() {
                background: color.scale(t($bg-3), $lightness: 20%);
            }
        }
    }
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,
body,
#root {
    overflow: hidden;
    min-height: 100%;
}

header {
    position: absolute;
    left: 10%;
}

body.no-anim * {
    transition: none !important;
    animation: none !important;
}

#page-title {
    position: absolute;
    font-size: 6rem;
    font-family: Merriweather, serif;

    > span {
        display: inline-block;
    }
}

#root {
    transition: all 0.2s;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-repeat: no-repeat;

    font-family: "Poppins", sans-serif;
    font-size: 2rem;

    @include theme() {
        background-color: t($bg-1);
        color: t($text-color);
    }
}

button {
    outline: none;
    border: none;
    cursor: pointer;
}

.menu {
    position: absolute;
    right: 2%;
    top: 2%;
    z-index: 2;
    > button {
        @include theme() {
            color: t($text-color);
        }
        -webkit-tap-highlight-color: transparent;
        transition: all 0.2s;
        background-color: inherit;
        border-radius: 50%;
        padding: 10px;
        position: relative;
        right: 0;
        font-size: 30px;

        &:hover {
            transform: scale(1.2);
        }
        &.rotate {
            transform: rotate(180deg);
        }
    }
}

.container {
    position: relative;
    display: grid;
    grid-template-columns: 70vw 1fr;
    border-radius: $border-rounding;
    min-height: 70vh;
    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.075);
}

nav {
    height: 100%;
    grid-column: 2;
    position: relative;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    // justify-content: center;
    clip-path: inset(-1px -1px);
    border-radius: $border-rounding;

    > button {
        flex: 1;
        transition: right 0.5s, background-color 0.5s;
        position: relative;
        background-color: rgb(37, 37, 37);
        color: white;
        padding: 1em;
        font-size: 100%;
        text-align: center;
        /* z-index: 1; */

        &:first-child {
            border-top-right-radius: $border-rounding;
        }
        &:last-child {
            border-bottom-right-radius: $border-rounding;
        }
        &:hover {
            @include theme() {
                background: t($bg-2);
            }
        }
        &.active {
            @include theme() {
                background: t($bg-2);
            }
        }

        > i {
            float: left;
            margin-right: 10px;
        }
    }
}

main {
    grid-column: 1;
    background-color: rgba(131, 131, 131, 0.034);
    position: relative;
    clip-path: inset(0px -2px);
    border-radius: $border-rounding 0 0 $border-rounding;
}

section {
    @include custom-scrollbar;
    @include theme() {
        color: t($text-2);
        background: t($bg-2);
    }
    // visibility: hidden;
    display: block;
    position: absolute;
    left: 101%;
    height: 100%;
    width: 100%;
    transition: left 0.5s, opacity 0.5s;
    border-radius: $border-rounding 0 0 $border-rounding;
    padding: 5vh 5vw;
    z-index: 0;
    overflow-y: scroll;
    overflow-x: clip;
    font-size: 0.8em;
    line-height: 1.5em;

    &.active {
        // visibility: visible;
        left: 0;
        opacity: 1;
    }

    > h2 {
        margin-top: 10px;
        margin-bottom: 10px;
    }

    > p {
        position: relative;
        margin-bottom: 0.5em;
    }
}

.item-container {
    /* position: absolute; */
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    gap: 10px;
}

.item {
    @include theme() {
        color: t($text-2);
        background: t($bg-3);
    }
    min-width: 300px;
    max-width: 45%;
    border-radius: $border-rounding;
    box-shadow: 0 0 8px 4px rgb(0, 0, 0, 0.1);
    padding: $item-font-size;
    margin: 1em 0;

    &.grow {
        flex-grow: 1;
        max-width: 100%;
    }

    > h3 {
        margin-bottom: 0.5em;
    }

    p {
        // line-height: 1em;
        vertical-align: middle;
        font-size: $item-font-size;
        padding: 0.2em;

        img {
            vertical-align: middle;
            float: "left";
        }
    }
}

.repos {
    @include custom-scrollbar();
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    gap: 10px;
    overflow-y: clip;
    overflow-x: scroll;
    max-height: 300px;
    width: 100%;
}

.horizontal-scroll {
    min-width: 300px;
    position: relative;
    width: 100%;
    z-index: 3;
    // overflow: clip;
    .scroll-left,
    .scroll-right {
        flex: none;
        z-index: 4;
        flex: none;
        background: none;
        color: white;
        position: absolute;
        top: 50%;
        width: auto;
        transition: all 0.5s;

         @media screen and (max-width: $tablet) {
            display: none;
        }
    }
    .scroll-left {
        left: -25px;
    }
    .scroll-right {
        right: -25px;
    }
}

.scrollable {
    scroll-behavior: smooth;
}

.repo {
    flex: 0 auto;
    min-width: fit-content;

    h3 {
        width: 100%;
        display: inline-block;
        white-space: nowrap;
    }
    p {
        max-width: 400px;
        text-overflow: ellipsis;
        overflow: hidden;
    }

    &.error {
        flex: 1;
        width: 100%;
        a {
            color: white;
        }
    }
}

.icon {
    &:hover::after,
    &:hover::before {
        transition: all 0.2s;
        transform: scale(1.2);
    }
    &::after {
        margin-left: 10px;
    }

    &.github {
        &::after {
            font-family: "Font Awesome 5 Brands";
            font-weight: 900;
            content: "\f09b";
            float: right;
            color: white;
        }
    }

    &.ext-link {
        &::after {
            font-family: "Font Awesome 5 Free";
            font-weight: 900;
            content: "\f35d";
            float: right;
            color: white;
        }
    }
}

.content {
    transition: all 0.5s;
    max-width: 100%;
    display: block;
    position: relative;
    margin: 15px auto;
    video {
        display: block;
        width: 100%;
        border-radius: $border-rounding;
    }
    a {
        text-decoration: none;
        width: 100%;
        height: 100%;
        transition: all 0.5s;
        position: absolute;
        opacity: 0;
        top: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 2em;
        color: white;
    }
    &:hover {
        a {
            background-color: rgba(22, 22, 22, 0.418);
            opacity: 1;
        }

        transform: scale(1.1);
    }
}

.work {
    h3 > span {
        margin-left: 0.2em;
        font-weight: lighter;
        font-size: 80%;
    }

    ul {
        margin-left: $item-font-size;

        li {
            font-size: $item-font-size;
            margin-bottom: $item-font-size;
        }
    }
}

.contact {
    ul {
        list-style: none;
        li {
            vertical-align: middle;
            i {
                width: 24px;
                margin-right: 1em;
            }
            a {
                text-decoration: none;
                @include theme() {
                    color: t($text-2);
                }

                &:hover {
                    color: grey;
                }
            }
        }
    }
}

.break {
    content: "\A";
    white-space: pre;
}

.express {
    font: helvetica neue, open sans, sans-serif;
    font-style: normal;

    &::before {
        content: "ex";
    }
}

.progress-bar {
    /* background-color: white; */
    /* border: 5px solid black; */
    // background-color: $section-color;
    @include theme() {
        color: t($text-color);
        background: t($bg-3);
    }
    height: 25px;
    border-radius: 25px;
    z-index: 2;
    padding: 2px;

    span {
        display: block;
        height: 100%;
        background-color: rgb(57, 135, 172);
        border-radius: 25px;
        z-index: 0;
    }
}

@media only screen and (max-width: $tablet) {
    .root {
        align-items: flex-end;
    }
    .container {
        width: 90vw;
        height: 90vh;
        bottom: 0;
        grid-template-columns: none;
        grid-template-rows: 1fr 100px;
    }
    main {
        grid-column: 1;
        grid-row: 1;
        clip-path: inset(-4px 0px);
        // font-size: 0.8em;
    }

    section {
        height: 105%;
        transition: top 0.5s, opacity 0.5s;
        left: inherit;
        top: 101%;

        word-wrap: break-word;
        border-radius: $border-rounding $border-rounding 0 0;
        &.active {
            left: inherit;
            top: 0;
            opacity: 1;
        }
    }

    .item {
        max-width: 100%;
    }

    nav {
        grid-column: 1;
        grid-row: 2;
        flex-direction: row;
        font-size: 2vw;
        > button {
            &:first-child {
                border-top-right-radius: 0;
                border-top-left-radius: $border-rounding;
            }
            &:last-child {
                border-bottom-right-radius: 0;
                border-top-right-radius: $border-rounding;
            }

            > i {
                float: unset;
                margin: unset;
                font-size: 2em;
            }

            > span {
                &.mobile-hide {
                    display: none;
                }
            }
        }
    }
}

